--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
+    "dotenv": "^16.3.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
