--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "instalytics",
+  "name": "Tapshort",
   "version": "1.0.0",
-  "description": "Instagram Analytics",
-  "main": "index.js",
+  "description": "Link Generator",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "serve": "nodemon server.js"
+    "start": "node server.js"
+    // "serve": "nodemon server.js"
   },
   "keywords": [
     "Instagram",
