--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "Instagram",
     "Analytics"
   ],
-  "author": "AnirudhMaddy",
+  "author": "saisurya",
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.1",
