--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "csurf": "^1.9.0",
     "dotenv": "^16.3.1",
     "ejs": "^2.6.1",
